--- a/libs/cron-editor/src/lib/cron-editor.template.html
+++ b/libs/cron-editor/src/lib/cron-editor.template.html
@@ -20,7 +20,7 @@
     <!-- HOURLY -->
     <mat-tab *ngIf="!options.hideHourlyTab" label="{{ 'cronEditor.lbl.hourly' | translate }}">
       <div class="cron-editor-tab-content" [formGroup]="hourlyForm">
-        <span class="cron-form-label">{{('cronEditor.lbl.every' | translate) + '&nbsp;' + '&nbsp;' }}</span>
+        <span>{{('cronEditor.lbl.every' | translate) + '&nbsp;' + '&nbsp;' }}</span>
         <mat-form-field>
           <mat-label>{{ 'cronEditor.lbl.hours' | translate }}</mat-label>
           <mat-select formControlName="hours">
@@ -36,10 +36,10 @@
     <mat-tab *ngIf="!options.hideDailyTab" label="{{ 'cronEditor.lbl.daily' | translate }}">
       <div class="cron-editor-tab-content" [formGroup]="dailyForm">
 
-        <mat-radio-group formControlName="subTab" fxLayout="column" fxLayoutAlign="start start">
+        <mat-radio-group formControlName="subTab" fxLayout="column" fxLayoutAlign="stretch start">
           <mat-radio-button name="subTab" value="everyDays" checked="checked">
 
-            <span class="cron-form-label">{{('cronEditor.lbl.every' | translate) + '&nbsp;' + '&nbsp;' }}</span>
+            <span>{{('cronEditor.lbl.every' | translate) + '&nbsp;' + '&nbsp;' }}</span>
 
             <mat-form-field formGroupName="everyDays">
               <mat-label>{{ 'cronEditor.lbl.days' | translate }}</mat-label>
@@ -91,13 +91,13 @@
         <span>{{('cronEditor.lbl.every' | translate) + '&nbsp;' + '&nbsp;' }}</span>
 
         <div [formGroup]="weeklyForm">
-          <mat-checkbox class="ml-12" formControlName="MON">{{ 'cronEditor.lbl.MON' | translate }}</mat-checkbox>
-          <mat-checkbox class="ml-12" formControlName="TUE">{{ 'cronEditor.lbl.TUE' | translate }}</mat-checkbox>
-          <mat-checkbox class="ml-12" formControlName="WED">{{ 'cronEditor.lbl.WED' | translate }}</mat-checkbox>
-          <mat-checkbox class="ml-12" formControlName="THU">{{ 'cronEditor.lbl.THU' | translate }}</mat-checkbox>
-          <mat-checkbox class="ml-12" formControlName="FRI">{{ 'cronEditor.lbl.FRI' | translate }}</mat-checkbox>
-          <mat-checkbox class="ml-12" formControlName="SAT">{{ 'cronEditor.lbl.SAT' | translate }}</mat-checkbox>
-          <mat-checkbox class="ml-12" formControlName="SUN">{{ 'cronEditor.lbl.SUN' | translate }}</mat-checkbox>
+          <mat-checkbox class="check-weekday" formControlName="MON">{{ 'cronEditor.lbl.MON' | translate }}</mat-checkbox>
+          <mat-checkbox class="check-weekday" formControlName="TUE">{{ 'cronEditor.lbl.TUE' | translate }}</mat-checkbox>
+          <mat-checkbox class="check-weekday" formControlName="WED">{{ 'cronEditor.lbl.WED' | translate }}</mat-checkbox>
+          <mat-checkbox class="check-weekday" formControlName="THU">{{ 'cronEditor.lbl.THU' | translate }}</mat-checkbox>
+          <mat-checkbox class="check-weekday" formControlName="FRI">{{ 'cronEditor.lbl.FRI' | translate }}</mat-checkbox>
+          <mat-checkbox class="check-weekday" formControlName="SAT">{{ 'cronEditor.lbl.SAT' | translate }}</mat-checkbox>
+          <mat-checkbox class="check-weekday" formControlName="SUN">{{ 'cronEditor.lbl.SUN' | translate }}</mat-checkbox>
         </div>
 
         <span>{{ ('cronEditor.lbl.at' | translate) + '&nbsp;' + '&nbsp;' }}</span>
@@ -113,7 +113,7 @@
     <!-- MONTHLY -->
     <mat-tab label="{{ 'cronEditor.lbl.monthly' | translate }}" *ngIf="!options.hideMonthlyTab">
       <div class="cron-editor-tab-content" [formGroup]="monthlyForm">
-        <mat-radio-group formControlName="subTab">
+        <mat-radio-group formControlName="subTab" fxLayout="column" fxLayoutAlign="stretch start">
 
           <mat-radio-button name="monthly-radio" value="specificDay">
             <!-- SPECIFIC DAY -->
@@ -218,7 +218,7 @@
     <!-- YEARLY -->
     <mat-tab  label="{{ 'cronEditor.lbl.yearly' | translate }}" *ngIf="!options.hideYearlyTab">
       <div class="cron-editor-tab-content" [formGroup]="yearlyForm">
-        <mat-radio-group formControlName="subTab">
+        <mat-radio-group formControlName="subTab" fxLayout="column" fxLayoutAlign="stretch start">
           <mat-radio-button name="yearly-radio" value="specificMonthDay">
 
             {{ ('cronEditor.lbl.onTheDoubleMale' | translate) + '&nbsp;' + '&nbsp;' }}
