removed flex-layout. Compatibility with angular 15

--- a/libs/cron-editor/src/lib/cron-editor.template.html
+++ b/libs/cron-editor/src/lib/cron-editor.template.html
@@ -36,7 +36,7 @@
     <mat-tab *ngIf="!options.hideDailyTab" label="{{ 'cronEditor.lbl.daily' | translate }}">
       <div class="cron-editor-tab-content" [formGroup]="dailyForm">
 
-        <mat-radio-group formControlName="subTab" fxLayout="column" fxLayoutAlign="stretch start">
+        <mat-radio-group formControlName="subTab" class="column-stretch-start">
           <mat-radio-button name="subTab" value="everyDays" checked="checked">
 
             <span>{{('cronEditor.lbl.every' | translate) + '&nbsp;' + '&nbsp;' }}</span>
@@ -113,7 +113,7 @@
     <!-- MONTHLY -->
     <mat-tab label="{{ 'cronEditor.lbl.monthly' | translate }}" *ngIf="!options.hideMonthlyTab">
       <div class="cron-editor-tab-content" [formGroup]="monthlyForm">
-        <mat-radio-group formControlName="subTab" fxLayout="column" fxLayoutAlign="stretch start">
+        <mat-radio-group formControlName="subTab" class="column-stretch-start">
 
           <mat-radio-button name="monthly-radio" value="specificDay">
             <!-- SPECIFIC DAY -->
@@ -218,7 +218,7 @@
     <!-- YEARLY -->
     <mat-tab  label="{{ 'cronEditor.lbl.yearly' | translate }}" *ngIf="!options.hideYearlyTab">
       <div class="cron-editor-tab-content" [formGroup]="yearlyForm">
-        <mat-radio-group formControlName="subTab" fxLayout="column" fxLayoutAlign="stretch start">
+        <mat-radio-group formControlName="subTab" class="column-stretch-start">
           <mat-radio-button name="yearly-radio" value="specificMonthDay">
 
             {{ ('cronEditor.lbl.onThe' | translate) + '&nbsp;' + '&nbsp;' }}
